--- a/.gitignore
+++ b/.gitignore
@@ -22,61 +22,51 @@ wheels/
 
 # Virtual Environment
 venv/
-env/
 ENV/
-.env
-.venv
-env.bak/
-venv.bak/
+env/
 
-# IDE specific files
+# IDE
 .idea/
 .vscode/
 *.swp
 *.swo
-.project
-.pydevproject
-.settings/
 
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# Testing
-.coverage
-htmlcov/
-.tox/
-.nox/
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Documentation
-docs/_build/
-site/
-
-# Logs and databases
-*.log
-*.sqlite
+# Database
 *.db
+*.sqlite3
 
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-#DB
+# ChromaDB
 chroma_db/
+
+# Logs
+*.log
+
+# Frontend / Node
+node_modules/
+/frontend/build
+/frontend/coverage
+/frontend/.pnp
+.pnp.js
+
+# Frontend misc
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Frontend testing
+/frontend/coverage
+
+# Frontend production
+/frontend/build
+
+# Frontend cache
+.eslintcache
+.npm
